--- a/index.html
+++ b/index.html
@@ -2,20 +2,64 @@
 
 <head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+
 </head>
 
-<body>
+<body class="m-5">
   <h1 class="title">BK PETS</h1>
-  <h1 class="title">The best products or your dog</h1>
-  <h1 class="title">Because your dog deserves to be at their happiest</h1>
-  <button class="button is-black">Learn More</button>
+  <section class="hero is-large">
+    <div class="hero-body">
+      <div class="columns">
+        <div class="column">
+          <div class="title">The best products for your dog</div>
+          <div class="Subtitle">Because your dog deserve to be at their happiest</div>
+          <div><button class="button is-black">Learn More</button></div>
+        </div>
+        <div class="column">
+          <figure class="image is-500x500">
+            <img src="webpage.png">
+          </figure>
+        </div>
+      </div>
+  </div>
+
+  </section>
+
+  <section>
+
+
+    <div class="columns">
+      <div class="column">
+        <div class="box">
+          <figure class="image is-250x250">
+            <img id="dog_shampoo" src="dog_shampoo.jpeg">
+          </figure>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <button id="leftArrow" class="button is-black"><</button>
+          </div>
+          <div class="column">
+          </div>
+          <div class="column">
+          </div>
+          <div class="column">
+            <button id="rightArrow" class="button is-black">></button>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        Second column
+      </div>
+    </div>
+
+  </section>
 
   <div class="columns">
     <div class="column">
-      First column
     </div>
     <div class="column">
-      <p class="is-size-3">
+      <p class="has-text-centered is-size-3">
         <div class="has-text-centered">
           Your Best Value Proposition
         </div>
@@ -27,11 +71,76 @@
       </p>
     </div>
     <div class="column">
-      Third column
     </div>
   </div>
 
+  <div class="columns">
+    <div class="column">
+      <figure class="image is-500x500">
+        <img src="black square.jpeg">
+      </figure>
+      <p class="is-size-6">
+        @someoneinqueens
+      </p>
+      <p class="is-size-6">
+        my dog loves these shampoos!
+      </p>
+      <p class="is-size-6">
+        3 weeks ago
+      </p>
+    </div>
+    <div class="column">
+      <figure class="image is-500x500">
+        <img src="black square.jpeg">
+      </figure>
+      <p class="is-size-6">
+        @someoneinbrooklyn
+      </p>
+      <p class="is-size-6">
+        my dog hogs the shower now!
+      </p>
+      <p class="is-size-6">
+        2 weeks ago
+      </p>
+    </div>
+    <div class="column">
+      <figure class="image is-500x500">
+        <img src="black square.jpeg">
+      </figure>
+      <p class="is-size-6">
+        @someoneinmanhattahn
+      </p>
+      <p class="is-size-6">
+        Even I like the shampoo
+      </p>
+      <p class="is-size-6">
+        4 weeks ago
+      </p>
+    </div>
+  </div>
+
+  <footer class="footer">
+    <div class="columns">
+      <div class="column">
+        <strong>BK PETS</strong>
+        <p>2010 - 2020</p>
+        <p>Privacy - Terms</p>
+      </div>
+      <div class="column">
+      </div>
+      <div class="column">
+      </div>
+      <div class="column">
+        <p>Follow us on </p>
+        <p>Instagram</p>
+        <p>Facebook</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
     
 </body>
 
 </html>
+
