Scroll through text

--- a/index.html
+++ b/index.html
@@ -48,8 +48,14 @@
           </div>
         </div>
       </div>
-      <div class="column">
-        Second column
+      <div class="column content">
+        <span id="title"><strong>BK Dog Shampoo</strong></span>
+        <p id= "line1">Only made from only natural ingredients. <br/> Affordable, while being good for you dog's skin</p>
+        <ul id="list">
+          <li>Fragrence Free</li>
+          <li>Contains Aloe</li>
+          <li>Helps with shedding</li>
+        </ul>
       </div>
     </div>
 
